syntax = "proto3";
package celestica.namespace.v1;

service NamespaceService {
  // Get all namespaces
  rpc GetNamespaces(GetNamespacesRequest) returns (GetNamespacesResponse);

  // Create a namespace
  rpc CreateNamespace(CreateNamespaceRequest) returns (CreateNamespaceResponse);

  // Delete a namespace
  rpc DeleteNamespace(DeleteNamespaceRequest) returns (DeleteNamespaceResponse);

}

message GetNamespacesRequest {}

message GetNamespacesResponse { repeated Namespace namespaces = 1; }

message CreateNamespaceRequest {
  // Name of the namespace to be created
  string name = 1;

  // TODO: Partitioning scheme to use for tables created in this namespace
}

message CreateNamespaceResponse { Namespace namespace = 1; }

message DeleteNamespaceRequest {
  // Name of the namespace to be deleted
  string name = 1;
}

message DeleteNamespaceResponse {}


message Namespace {
  // Namespace ID
  int64 id = 1;

  // Name of the Namespace
  string name = 2;

}
